# dih-security-scraper

./: .env  .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
input/: .gitignore
output/: no_real_text.md
output/00004280/: 00004280man_de_en_fr_full.md
src/: config.py  extractor.py  main.cpp  processor.py  watcher.py
