[tool.poetry]
name = "safety-notes-extractor"
version = "0.1.0"
description = "Extract safety notes from PDF documents using docling and LLM"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.scripts]
safety-notes-extractor = "main:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
docling = "2.8.3"
watchdog = "^3.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
loguru = "^0.7.2"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
torch = ">=2.2.0"
torchvision = ">=0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 